# EdgeForge

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: EdgeForge.h
lib/: EdgeForge.cpp
lib/include/: Test.h
lib/include/structure/: BaseField.h  DataField.h  DataField.hpp  Sensor.h
lib/src/: CMakeLists.txt  Test.cpp
lib/src/structure/: BaseField.cpp  Sensor.cpp
